# SDL3-CS

.github/workflows/: build.yml
emscripten_build_example/: .gitignore  CMakeLists.txt  README.md  build.sh
native/ios/SDL3.xcframework/: Info.plist
native/ios/SDL3.xcframework/ios-arm64/SDL3.framework/: Info.plist
native/ios/SDL3.xcframework/ios-arm64_x86_64-simulator/SDL3.framework/: Info.plist  SDL3
native/ios/SDL3_image.xcframework/: Info.plist
native/ios/SDL3_image.xcframework/ios-arm64/SDL3_image.framework/: Info.plist
native/ios/SDL3_image.xcframework/ios-arm64_x86_64-simulator/SDL3_image.framework/: Info.plist  SDL3_image
native/ios/SDL3_mixer.xcframework/: Info.plist
native/ios/SDL3_mixer.xcframework/ios-arm64/SDL3_mixer.framework/: Info.plist
native/ios/SDL3_mixer.xcframework/ios-arm64_x86_64-simulator/SDL3_mixer.framework/: Info.plist  SDL3_mixer
native/ios/SDL3_ttf.xcframework/: Info.plist
native/ios/SDL3_ttf.xcframework/ios-arm64/SDL3_ttf.framework/: Info.plist
native/ios/SDL3_ttf.xcframework/ios-arm64_x86_64-simulator/SDL3_ttf.framework/: Info.plist  SDL3_ttf
native/osx-x64/: libSDL3.dylib  libSDL3_image.dylib  libSDL3_mixer.dylib  libSDL3_ttf.dylib
